--- a/svelte/src/app.css
+++ b/svelte/src/app.css
@@ -1,34 +1,18 @@
-@import url(//fonts.googleapis.com/css2?family=Google+Sans);
 @import url(//fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200);
+@import url(dora-2024.css);
 
 :root {
-  font-family: "Google Sans", "Roboto", Arial, Helvetica, sans-serif;
   line-height: 1.25;
   font-weight: 400;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
 
-
-  --dora-black: #221E27;
-  --dora-sky-blue: #49a2ec;
-  --dora-warm-white: #f0EEEA;
-  --dora-mauve: #b8affe;
-  --dora-vermillion: #f45c24;
-  --dora-spotlight-yellow: #f2e15c;
-
-  --dora-background-color: var(--dora-sky-blue);
-
-  background-color: var(--dora-background-color);
-  color:#f0EEEA;
+  background-color: var(--dora-secondary-b);
+  color:var(--dora-primary-light);
 }
 
 .material-symbols-outlined {
     cursor: pointer;
-    opacity: 0.5;
+    opacity: 0.6;
     font-size: 2em;
     transition: opacity 0.1s;
     user-select: none;
